--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
-    <link rel="stylesheet" type="text/css" href="src/stylesheet" />
+    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
     <h1>Hello world</h1>
