--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
   </head>
   <body>
     <h1>Hello world</h1>
-    <footer>Coded by Towela Tembo</footer>
+    <footer>
+      Coded by
+      <a href="http://github.com/TOWELA96" target="_blank">Towela Tembo</a>
+      hosted on
+      <a href="https://github.com/TOWELA96/Weather-App-Towela" target="_blank"
+        >Github</a
+      >
+      website hosted on
+      <a
+        href="https://6579b38953e5da159c295182--chimerical-rugelach-e9cf75.netlify.app/"
+        target="_blank"
+        >Netlify</a
+      >
+    </footer>
     <script src="src/index.js"></script>
   </body>
 </html>
