--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
     <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <h1>Hello world</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter city..." required />
+        <input type="submit" value="search" />
+      </form>
+    </header>
+    <main>
+      <h1>Hello world</h1>
+    </main>
     <footer>
-      Coded by
+      This project was coded by
       <a href="http://github.com/TOWELA96" target="_blank">Towela Tembo</a>
       hosted on
       <a href="https://github.com/TOWELA96/Weather-App-Towela" target="_blank"
