added a paragraph element to html and removed js

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
       </form>
     </header>
     <main>
-      <h1>Hello world</h1>
+      <h1>Johannesburg</h1>
+      <p>
+        Wednesday 19:08 broken clouds
+        <br />
+        61%, Wind: 1.79km/h
+      </p>
     </main>
     <footer>
       This project was coded by
