--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
   <body>
     <div class="box">
       <header>
-        <form>
-          <input type="search" placeholder="Enter city..." required />
-          <input type="submit" value="search" />
+        <form class="search-form">
+          <input
+            type="search"
+            placeholder="Enter city..."
+            required
+            class="search-form-input"
+          />
+          <input type="submit" value="search" class="search-form-button" />
         </form>
       </header>
       <main>
