--- a/index.html
+++ b/index.html
@@ -26,16 +26,21 @@
         </form>
       </header>
       <main>
-        <div>
-          <h1>Johannesburg</h1>
-          <p>
-            Wednesday 19:08 broken clouds
-            <br />
-            61%, Wind: 1.79km/h
-          </p>
-        </div>
-        <div>
-          <p>🌥 12°C</p>
+        <div class="weather-app-data">
+          <div>
+            <h1>Johannesburg</h1>
+            <p class="weather-app-date">
+              Wednesday 19:08 broken clouds
+              <br />
+              Humidity <span class="weather-update">61%</span> , Wind:
+              <span class="weather-update">1.79km/h</span>
+            </p>
+          </div>
+          <div class="weather-app-temp-container">
+            <div class="weather-icon">🌥</div>
+            <div class="weather-app-temp">12</div>
+            <div class="waether-app-unit">°c</div>
+          </div>
         </div>
       </main>
       <footer>
