added basic css

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="weather-app-temp-container">
             <div class="weather-icon">🌥</div>
             <div class="weather-app-temp">12</div>
-            <div class="waether-app-unit">°c</div>
+            <div class="weather-app-unit">°c</div>
           </div>
         </div>
       </main>
