--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 id="city">Johannesburg</h1>
+            <h1 id="city"></h1>
             <p class="weather-app-date">
               Wednesday 19:08 broken clouds
               <br />
@@ -40,7 +40,7 @@
           </div>
           <div class="weather-app-temp-container">
             <div class="weather-icon">🌥</div>
-            <div class="weather-app-temp">12</div>
+            <div class="weather-app-temp" id="temperature">12</div>
             <div class="weather-app-unit">°c</div>
           </div>
         </div>
