updated weather information
added humidity and wind speed refresher

--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
           <div>
             <h1 id="city"></h1>
             <p class="weather-app-date">
-              Wednesday 19:08 broken clouds
+              Wednesday 19:08 <span id="description">broken clouds </span>
               <br />
-              Humidity <span class="weather-update">61%</span> , Wind:
-              <span class="weather-update">1.79km/h</span>
+              Humidity <span id="humidity" class="weather-update"></span> ,
+              Wind:
+              <span class="weather-update" id="wind-speed">1.79km/h</span>
             </p>
           </div>
           <div class="weather-app-temp-container">
