--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
           <div>
             <h1 id="city"></h1>
             <p class="weather-app-date">
-              Wednesday 19:08 <span id="description">broken clouds </span>
+              <span id="time"></span>
+
+              <span id="description">broken clouds </span>
               <br />
               Humidity <span id="humidity" class="weather-update"></span> ,
               Wind:
-              <span class="weather-update" id="wind-speed">1.79km/h</span>
+              <span class="weather-update" id="wind-speed"></span>
             </p>
           </div>
           <div class="weather-app-temp-container">
