--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </p>
           </div>
           <div class="weather-app-temp-container">
-            <div class="weather-icon">🌥</div>
+            <div id="icon"></div>
             <div class="weather-app-temp" id="temperature">12</div>
             <div class="weather-app-unit">°c</div>
           </div>
